# quant_trade

./: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  TODO.md  TODO_MODEL_IMPROVEMENTS.md  TODO_NEXT_SESSION.md  claude.md  pyproject.toml  requirements.txt  start_jupyter.sh
.claude/: claude.md  settings.local.json
archive/old_scripts/: create_training_dataset.py  evaluate_model.py  train_baseline_model.py  train_quantile_model.py
data/: .gitkeep
docs/: CLEANUP_COMMANDS.md  CLEANUP_COMPLETED.md  CLEANUP_QUICK_GUIDE.md  CLEANUP_STATUS_REPORT.md  NAVIGATION_IMPROVEMENTS.md  PROJECT_CLEANUP_ANALYSIS.md  README.md  REFACTORING_COMPLETE.md  SESSION_COMPLETE_20251024.md  SRC_REFACTORING_COMPLETE.md  claude_context.md  how_to_evaluate_models.md  missing_data_strategy.md  model_evaluation_summary.md  modular_pipeline_guide.md  modularization_summary.md  negative_skew_explained.md  pipeline_architecture.md  pipeline_quick_reference.md  src_cleanup_analysis.md  src_reorganization_plan.md  v2_workflow_summary.md
docs/architecture/: README.md  data_acquisition_guide.md  data_sources_feasibility.md  feature_summary.md  modular_architecture.md  regression_framework_spec.md
notebooks/: 01_data_exploration.ipynb  README.md
scripts/: analyze_missing_data.py  analyze_target_distribution.py  evaluate_features.py  fetch_financials.py  fetch_market_data.py  fetch_metadata.py  fetch_production_data.py  fetch_sample_data.py  generate_sp500_universe.py  train_baseline_model.py  train_with_target_transform.py  update_daily_data.py
setup/: SCHEDULING_README.md  com.quant.daily_update.plist
src/: __init__.py
workflows/: __init__.py  wf_30d_returns.py  wf_30d_returns_v2.py
(+68 files in other folders)
